--- a/src/模版.md
+++ b/src/模版.md
@@ -8,7 +8,7 @@ category:
 tag:
     - 
     - 
-icon: https://app-1253314979.cos.ap-beijing.myqcloud.com/favicon.ico
+icon: 
 sticky: false
 star: false
 article: true
@@ -24,8 +24,6 @@ backToTop: true
 ---
 
 # 敬请期待
-
-
 
 敬请期待
 
