--- a/src/program/rust/1.安装及Terminal 相关指令.md
+++ b/src/program/rust/1.安装及Terminal 相关指令.md
@@ -1,79 +1,46 @@
----
-title: 01-rust第一课
-date: 
-author: Lilya 黑静美
-isOriginal: true
-category: 
-    - 编程
-tag:
-    - rust
-    -
-icon: /img/Rust.ico
-sticky: false
-star: false
-article: true
-timeline: true
-image: false
-navbar: true
-sidebarIcon: true
-headerDepth: 3
-comment: true
-lastUpdated: true
-editLink: false
-backToTop: true
----
-
 # Install
-
 When I Use Mac OS :
 input the following 指令 `in your terminal`
+:::info
 curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs
+:::
 ![注意rust up 和cargo的路径](https://cdn.nlark.com/yuque/0/2023/png/39218772/1698277578713-6087c784-ba0c-4626-b3cb-57119b0c3790.png#averageHue=%23202120&clientId=ud85b67a3-b82a-4&from=paste&height=504&id=u08084f79&originHeight=970&originWidth=1320&originalType=binary&ratio=2&rotation=0&showTitle=true&size=393857&status=done&style=none&taskId=uf6e303af-3e8c-460e-9cc5-8ec8831d717&title=%E6%B3%A8%E6%84%8Frust%20up%20%E5%92%8Ccargo%E7%9A%84%E8%B7%AF%E5%BE%84&width=686 "注意rust up 和cargo的路径")
 choose 1 to continue the installation
-![Bildschirmfoto 2023-10-26 um 01.48.31.png](./note1.assets/1698277773697-35cf5a84-5fff-482f-b4e3-b9dbea0d16f5.png)
+![Bildschirmfoto 2023-10-26 um 01.48.31.png](https://cdn.nlark.com/yuque/0/2023/png/39218772/1698277773697-35cf5a84-5fff-482f-b4e3-b9dbea0d16f5.png#averageHue=%23222322&clientId=ud85b67a3-b82a-4&from=drop&id=ub12418f5&originHeight=134&originWidth=576&originalType=binary&ratio=2&rotation=0&showTitle=false&size=43997&status=done&style=none&taskId=u821c3d52-917d-47c3-ae5d-858d0179452&title=)
 
-# Terminal指令
+# Terminal 指令
 
 ##### 安装指令
-
 （如上）
-
 ##### rustup update
 
-##### rustup self uninstall 
+##### **rustc --version（适用于windows！！！）**
 
-##### rustc --version（适用于windows！！！）
+```bash
+rustup self uninstall
+```
 
-**Prüfen Sie, ob das Rust Environment richtig installiert wird. Folgend zeigt die Informantion von rust auf deine Computer enthalrend Version des rustes**
+
+
+Check whether the Rust Environment is installed correctly. The following shows the information from rust on your computer containing the version of rust
+Prüfen Sie, ob das Rust Environment richtig installiert wird. Folgend zeigt die Informantion von rust auf deine Computer enthalrend Version des rustes
 ![这是一个windows系统的示例 1.47.0是所展示图片的当前安装的rsut的版本号](https://cdn.nlark.com/yuque/0/2023/png/39218772/1698278979636-f4034022-070c-47fa-bc91-18f58db98160.png#averageHue=%23151515&clientId=ud85b67a3-b82a-4&from=drop&id=u49952e8b&originHeight=958&originWidth=1742&originalType=binary&ratio=2&rotation=0&showTitle=true&size=471046&status=done&style=none&taskId=u777302b2-b763-47af-8366-fd8a9a245a0&title=%E8%BF%99%E6%98%AF%E4%B8%80%E4%B8%AAwindows%E7%B3%BB%E7%BB%9F%E7%9A%84%E7%A4%BA%E4%BE%8B%201.47.0%E6%98%AF%E6%89%80%E5%B1%95%E7%A4%BA%E5%9B%BE%E7%89%87%E7%9A%84%E5%BD%93%E5%89%8D%E5%AE%89%E8%A3%85%E7%9A%84rsut%E7%9A%84%E7%89%88%E6%9C%AC%E5%8F%B7 "这是一个windows系统的示例 1.47.0是所展示图片的当前安装的rsut的版本号")
-**信息内容 ：rustc+版本号+(commit hash+yyyy-mm-dd) **
+**the information of this picture：rustc+版本号+(commit hash+yyyy-mm-dd) **
 
 ##### rustc doc 
-
 view the lolal rust instruction document
-
 ##### 新建文档（文件夹）
-
 mkdir+（文档名+. 文档格式）
-
 ##### 进入文件夹
-
 cd 文档名 或
 cd ***h **（打开上述文件 *h 代表重复的名字）
-
 #### 新建项目
-
 ##### . code 通过代码编译器打开code
-
 通过Terminal打开项目
 
 ##### 也可以先打开代码编译器，再由编译器创建项目
-
 ##### ！！项目最好单独建立在一个文件夹内
-
 ## 在新建的项目内打开Terminal
 
-## ![Bildschirmfoto 2023-10-26 um 02.56.22.png](./note1.assets/1698281890789-05ae81a1-668f-4b22-bff1-91a95f8e1d8f.png)
-
+## ![Bildschirmfoto 2023-10-26 um 02.56.22.png](https://cdn.nlark.com/yuque/0/2023/png/39218772/1698281890789-05ae81a1-668f-4b22-bff1-91a95f8e1d8f.png#averageHue=%2326282b&clientId=ud85b67a3-b82a-4&from=drop&id=ud8285ff4&originHeight=1412&originWidth=1660&originalType=binary&ratio=2&rotation=0&showTitle=false&size=179622&status=done&style=none&taskId=u229a6f3e-b8b4-4677-8a6b-5198351c747&title=)
 8.
-
